--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -33,3 +33,9 @@ jobs:
 
       - name : Build APK
         run: ./gradlew app:assembleDebug
+
+      - name: Upload APK Artifact
+      uses: actions/upload-artifact@v4
+      width:
+      name: cek-roda-debug-apk
+      path: app/build/outputs/apk/debug/*.apk
