--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -35,7 +35,7 @@ jobs:
         run: ./gradlew app:assembleDebug
 
       - name: Upload APK Artifact
-      uses: actions/upload-artifact@v4
-      width:
-      name: cek-roda-debug-apk
-      path: app/build/outputs/apk/debug/*.apk
+        uses: actions/upload-artifact@v4
+        with:
+        name: cek-roda-debug-apk
+        path: app/build/outputs/apk/debug/*.apk
